--- a/Unity_Server/ServerC/ServerC/ServerC.vcxproj.filters
+++ b/Unity_Server/ServerC/ServerC/ServerC.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="GameServer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NetworkData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SocketConnections.cpp">
